--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
- 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>git/gitHub</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <script> src="app.js"</script>
+    <h1>git</h1>
+</body>
+</html> 
