changes after connection with GitHub

--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <script> src="app.js"</script>
     <h1>git(main version master)</h1>
     <p>wese3 wese3 raw ja code ta3 islam</p>
+    <div>new text apres connecter avec GitHub</div>
 </body>
 </html> 
